--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,30 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Carousel</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
+    <button type="button" class="btn" style="color: white;" [routerLink]="''">Oxbridge</button>
+    <div>
+        <ng-container *ngIf="currentUser; then logedIn; else logedOut"></ng-container>
+    </div>
+
+    <ng-template #logedIn>
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" routerLink="/logged-user">Details</a>
         </li>
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
+    </ng-template>
+
+    <ng-template #logedOut>
+      <div class="buttons">
+        
+        <a routerLink="/log-in" class="button is-white">
+          <button class="btn btn-light">
+            Login
+        </button>
+      </a>
+        <a routerLink="/" class="button is-link"> 
+          <button class="btn btn-primary">
+            Sign Up
+        </button>
+      </a>
+      </div>
+    </ng-template>
   </nav>
