--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
 <div class="col-4">
-    <app-race-list title="past races" [races]="races"></app-race-list>
+    <app-race-list title="past races" [pastraces]="pastraces"></app-race-list>
 
   </div>
   <div class="col-4">
     <app-race-list title="ongoing races" [races]="races"></app-race-list>
   </div>
   <div class="col-4">
-    <app-race-list title="future races" [races]="races"></app-race-list>
+    <app-race-list title="future races" [futureraces]="futureraces"></app-race-list>
   </div>
 </div>
 </div>
