--- a/src/app/onging-race/onging-race.component.html
+++ b/src/app/onging-race/onging-race.component.html
@@ -1,9 +1,11 @@
 <div class="container">
   <div class="row">
 <div class="col-4">
-    <app-participants-list title="participants" [participants]="participants"></app-participants-list> 
+  <app-participants-list title="participants" [participants]="race.members" (selectParticipant)="selectParticipant($event)"></app-participants-list> 
 
   </div>
-  <div class="col-4">
-    
+  <div class="col-8">
+    <app-angular-gmap></app-angular-gmap> 
+      </div>
+    </div>
   </div>
