--- a/src/app/logged-user-detail/logged-user-detail.component.html
+++ b/src/app/logged-user-detail/logged-user-detail.component.html
@@ -2,11 +2,8 @@
     <div class="row">
   <div class="col-4">
     <ul class="list-group list-group-flush">
-        <button type="button" class="list-group-item list-group-item-action" [routerLink]="">Team</button>
-        <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
-        <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
-        <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
-        <button type="button" class="list-group-item list-group-item-action">Vestibulum at eros</button>
+        <button type="button" class="list-group-item list-group-item-action">Team</button>
+        <button type="button" class="list-group-item list-group-item-action" [routerLink]="''" (click)="logout()">Logout</button>
       </ul>
       
     </div>
