--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -10,7 +10,7 @@
               <label >Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
-            <button type="submit" class="btn btn-primary" [routerLink]="''">Submit</button>
+            <button type="submit" class="btn btn-primary" (click)="login()" [routerLink]="''">Submit</button>
           </form>
     </div>
 </div>
