--- a/src/app/logged-user-detail/logged-user-detail.component.html
+++ b/src/app/logged-user-detail/logged-user-detail.component.html
@@ -3,6 +3,7 @@
   <div class="col-4">
     <ul class="list-group list-group-flush">
         <button type="button" class="list-group-item list-group-item-action">Team</button>
+        <!-- continuation of the logged-user-detail.component.ts-->
         <button type="button" class="list-group-item list-group-item-action" [routerLink]="''" (click)="logout()">Logout</button>
       </ul>
       
