--- a/src/app/race-list/race-list.component.html
+++ b/src/app/race-list/race-list.component.html
@@ -2,7 +2,7 @@
 
 <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchTerm"/>
 
-
+<!--- this is a list of the races for all the diferrent types of races it is then called in the home component and routes to the respective type of races-->
 <ul class="list-group">
     <li class="list-group-item" *ngFor="let pastrace of pastraces | pastRaceFilter:searchTerm"><a [routerLink]="['/past-race', pastrace._id]">{{pastrace.name}}</a></li>
     <li class="list-group-item" *ngFor="let race of races | raceFilter:searchTerm"><a [routerLink]="['/ongoing-race', race._id]">{{race.name}}</a></li>
